--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
