--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "happy-dom": "^15.7.4",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
-    "vite": "^5.3.1",
+    "vite": "^5.4.11",
+    "vite-plugin-singlefile": "^2.0.3",
     "vitest": "^2.1.2",
     "vue-tsc": "^2.0.21"
   }
