--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 VITE_APP_NAME = Link Diagram Maker
 VITE_API_BASE = ./api
 VITE_STORAGE_KEY = ldm
-VITE_UNDO_LIMIT = 200
-VITE_AUTOSAVE_INTERVAL = 60
+VITE_DEFAULT_UNDO_LIMIT = 200
+VITE_DEFAULT_AUTOSAVE_DELAY = 60
